# AIS2105-QUBE

./: .gitignore  README.md  Video.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/qube_bringup/share/qube_bringup/: package.sh
install/qube_bringup/share/qube_bringup/launch/: bringup.launch.py
install/qube_bringup/share/qube_bringup/urdf/: controlled_qube.urdf.xacro
install/qube_controller/share/qube_controller/: package.sh  package.xml
install/qube_description/share/qube_description/: package.sh  package.xml
install/qube_driver/share/ament_index/resource_index/parent_prefix_path/: qube_driver
install/qube_driver/share/qube_driver/: local_setup.sh  package.sh
log/: latest_build
src/qube_bringup/: README.md  package.xml  setup.py
src/qube_bringup/launch/: bringup.launch.py
src/qube_bringup/urdf/: controlled_qube.urdf.xacro
src/qube_controller/: README.md  qube_controller.py  setup.cfg  setup.py
src/qube_controller/qube_controller/: qube_controller.py
src/qube_description/: README.md  setup.py
src/qube_description/config/: config.rviz
src/qube_description/launch/: view_qube.launch.py
src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
src/qube_driver/: package.xml
