<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qube_bringup</name>
  <version>0.0.0</version>
  <description>Bringup-pakke for Quanser QUBE</description>
  <maintainer email="kristian.lokkeberg@gmail.com">kristian</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>qube_description</exec_depend>
  <exec_depend>qube_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>